--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/dlwltjd7778/config-server  # ????? ?? ???
-          default-label: main                               # ? ?? ????
-          search-paths: config-file/**                        # ???? ?? ??
+          uri: https://github.com/dlwltjd7778/config-server  # 설정파일이 있는 깃주소
+          default-label: main                               # 해당 브랜치명
+          search-paths: config-file/**                        # 설정파일 경로
