--- a/config-file/service1/svc1-dev.yml
+++ b/config-file/service1/svc1-dev.yml
@@ -1,3 +1,9 @@
 com:
   jiseong:
     config-test: test!4
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
