--- a/config-file/service3/svc3-dev.yml
+++ b/config-file/service3/svc3-dev.yml
@@ -1,9 +1,16 @@
 com:
   jiseong:
-    config-test: TEST-SVC-3
+    config-test: TEST-SVC-3-~~~!!!
 
 management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans
+        include: refresh, health, beans, busrefresh
+
+spring:
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
